// SPDX-FileCopyrightText: Copyright 2025 Carabiner Systems, Inc
// SPDX-License-Identifier: Apache-2.0

// This type was lifted from the intoto project to avoid the pain of
// linking to external protos.
// https://github.com/in-toto/attestation/blob/main/protos/in_toto_attestation/v1/resource_descriptor.proto

syntax = "proto3";
package carabiner.policy.v1;

import "google/protobuf/struct.proto";

option go_package = "github.com/carabiner-dev/policy/api/v1";

// ResourceDescriptor is the official in-toto ResourceDescriptor definition
// but mirrored in the AMPEL API.
message ResourceDescriptor {
  string name = 1;

  string uri = 2;

  map<string, string> digest = 3;

  bytes content = 4;

  string download_location = 5;

  string media_type = 6;

  google.protobuf.Struct annotations = 7;
}
